<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/black"
    android:id="@+id/popUpLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_above="@+id/back_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp">

        <ImageView
            android:id="@+id/image_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:resize_mode="fixed_width"
            android:layout_gravity="center"
            app:use_controller="true" />
    </FrameLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25sp"
        android:text="Cancel" />


</RelativeLayout>