...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chat_home__layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/chats"
            android:textSize="30sp"
...
