...
                    android:src="@drawable/endorment_heart"
                    app:tint="@color/even_more_background" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chatWithUser"
                    android:src="@drawable/nav_chat"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:background="@color/fui_transparent" />


...
