<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:id="@+id/latex_window_root" >

    <TextView
        android:id="@+id/latex_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latex_input"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/latex_editText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/latex_input"
        android:autofillHints="Input the latex code to render"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/latex_render_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/render"
        android:layout_below="@+id/latex_editText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/latex_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/latex_output"
        android:textSize="16sp"
        android:layout_below="@+id/latex_render_button"/>

    <com.github.ybecker.epforuml.features.latex.MathView
        android:id="@+id/latex_mathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latex_quit_container"
        android:layout_below="@+id/latex_output"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="200dp"
        android:scrollbars="none"
        app:setTextSize="12sp"
        app:setTextColor="@color/textColor" />

    <!--
    <EditText
        android:id="@+id/latex_mathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latex_quit_container"
        android:layout_below="@+id/latex_output"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="200dp" /> -->

    <LinearLayout
        android:id="@+id/latex_quit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/latex_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/latex_save" />

        <Button
            android:id="@+id/latex_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/latex_cancel" />

    </LinearLayout>

</RelativeLayout>